--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,4 +16,8 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install All Depedencies
         run: pip install -r requirements.txt
+      - name: test with pytest
+        run: | # the pipe allows you run muliple commands for this case[pip install pytest and pytest -v -s]
+          pip install pytest
+          pytest
         
