--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-python@v2 # this installs python
         with:
           python-version: "3.9"
-      - name: Upgrade pip
+      - name: upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install All Depedencies
         run: pip install -r requirements.txt
