Added two options of adding environment variables

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,6 +4,21 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    #option 1 of pulling environments variables
+    environment:
+      name: testing # pulls the environment variables from github {setting>>>environments section}
+
+    #option 2 of pulling environment variables
+      env:
+        DATABASE_HOSTNAME=${{secrets.DATABASE_HOSTNAME}}
+        DATABASE_PORT=${{secrets.DATABASE_PORT}}
+        DATABASE_PASSWORD=${{secrets.DATABASE_PASSWORD}}
+        DATABASE_NAME=${{secrets.DATABASE_NAME}}
+        DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}}
+        JWT_SECRET_KEY=${{secrets.JWT_SECRET_KEY}}
+        ALGORITHIM=${{secrets.ALGORITHIM}}
+        ACCESS_TOKEN_EXPIRE_MINUTES=${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
+        
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -18,6 +33,6 @@ jobs:
         run: pip install -r requirements.txt
       - name: test with pytest
         run: | 
-         pip install pytest-github-actions-annotate-failures 
+         pip install pytest
          pytest
         
