Environment variables added

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,14 +10,14 @@ jobs:
 
     #option 2 of pulling environment variables
     env:
-        DATABASE_HOSTNAME=${{secrets.DATABASE_HOSTNAME}}
-        DATABASE_PORT=${{secrets.DATABASE_PORT}}
-        DATABASE_PASSWORD=${{secrets.DATABASE_PASSWORD}}
-        DATABASE_NAME=${{secrets.DATABASE_NAME}}
-        DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}}
-        JWT_SECRET_KEY=${{secrets.JWT_SECRET_KEY}}
-        ALGORITHIM=${{secrets.ALGORITHIM}}
-        ACCESS_TOKEN_EXPIRE_MINUTES=${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
+        DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+        DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+        DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+        DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+        DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
+        JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
+        ALGORITHIM: ${{secrets.ALGORITHIM}}
+        ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
 
     runs-on: ubuntu-latest
     steps:
