--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,6 +33,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: test with pytest
         run: | 
+         pip install -e .
          pip install pytest
          pytest
         
