--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -35,5 +35,5 @@ jobs:
         run: | 
          pip install -e .
          pip install pytest
-         pytest
+         python -m pytest --import-mode=append tests/
         
