--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,15 +10,29 @@ jobs:
 
     #option 2 of pulling environment variables
     env:
-        DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
-        DATABASE_PORT: ${{secrets.DATABASE_PORT}}
-        DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
-        DATABASE_NAME: ${{secrets.DATABASE_NAME}}
-        DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
-        JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
-        ALGORITHIM: ${{secrets.ALGORITHIM}}
-        ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
+      DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+      DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+      DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+      DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
+      JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
+      ALGORITHIM: ${{secrets.ALGORITHIM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+          POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
+        ports:
+          - 5432: 5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -32,7 +46,6 @@ jobs:
       - name: Install All Depedencies
         run: pip install -r requirements.txt
       - name: test with pytest
-        run: | 
-         pip install pytest
-         python -m pytest --import-mode=append tests/
-        
+        run: |
+          pip install pytest
+          python -m pytest --import-mode=append tests/
