--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -47,5 +47,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: test with pytest
         run: |
+          alembic upgrade head
           pip install pytest
           pytest -v
+          
