--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
-        uses: actions/checkout@v2 # actions/checkout@v2 command pulls our code
+        uses: actions/checkout@v2 # actions/checkout@v2 command pulls our codeb
       - name: Install Python 3.9
         uses: actions/setup-python@v2 # this installs python
         with:
@@ -47,7 +47,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: test with pytest
         run: |
-          alembic upgrade head
+          alembic upgrade head 
           pip install pytest
           pytest -v
           
