--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,7 +13,7 @@ jobs:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
       DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
-      DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+      DATABASE_NAME: ${{secrets.DATABASE_NAME}}_test
       DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
       JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
       ALGORITHIM: ${{secrets.ALGORITHIM}}
