--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,16 +37,16 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2 # actions/checkout@v2 command pulls our codeb
-      - name: Install Python 3.8
+      - name: Install Python 3.9
         uses: actions/setup-python@v2 # this installs python
         with:
-          python-version: "3.8"
+          python-version: "3.9"
       - name: upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install All Depedencies
         run: pip install -r requirements.txt
-      - name: test with pytest2
-        run: |
-          pip install pytest
-          pytest -v
+      # - name: test with pytest2
+      #   run: |
+      #     pip install pytest
+      #     pytest -v
           
