--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build_job:
     #option 1 of pulling environments variables
     environment:
       name: testing # pulls the environment variables from github {setting>>>environments section}
@@ -71,3 +71,10 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:buildcache,mode=max
           
+  deploy_job:
+    runs-on: ubuntu-latest
+    needs: [build_job]
+
+    steps:
+     - name: Deploying Some stuffs
+       run: echo 'Going to Deploy Some stuffs'
