--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -74,7 +74,16 @@ jobs:
   deploy_job:
     runs-on: ubuntu-latest
     needs: [build_job]
+    environment:
+      name: production_env # pulls the environment variables from github {setting>>>environments section}
 
     steps:
-     - name: Deploying Some stuffs
-       run: echo 'Going to Deploy Some stuffs'
+     - name: pulling git repo
+       uses: actions/checkout@v2
+     - name: Deploying To Heroku
+       uses: actions/checkout@v2
+       uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+       with:
+         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+         heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+         heroku_email: ${{secrets.HEROKU_EMAIL}}
