--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -79,8 +79,8 @@ jobs:
 
     steps:
      - name: Deploying To Heroku
-       uses: actions/checkout@v2
-       uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+     - uses: actions/checkout@v2
+     - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
        with:
          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
