Added more code for CD2

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -78,9 +78,10 @@ jobs:
       name: production_env # pulls the environment variables from github {setting>>>environments section}
 
     steps:
-     - name: Deploying To Heroku
-     - uses: actions/checkout@v2
-     - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+     - name: Pull Code and Deploy To Heroku
+       uses: actions/checkout@v2
+     - name: Deploying To Horoku
+       uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
        with:
          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
